JT-8517 Generalize hero height to prevent truncation of lengthy descriptions

--- a/app/assets/stylesheets/pages/community/_communities.scss
+++ b/app/assets/stylesheets/pages/community/_communities.scss
@@ -45,7 +45,7 @@ $line-height-community: 1.428571429;
 #hero {
   @include flexbox-center;
   padding: 30px 0px;
-  height: 220px;
+  min-height: 220px;
   background-image: image_url('school_profiles/hero_bg.jpg');
   text-align: center;
   color: white;
